--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="people">
     <div class="di1">
         <nav class="nav">
             <ul>
@@ -24,7 +26,7 @@
     <div class="brickhouse">
         <img src="brickhouse.png" id="brick">  
         <h1>BrickHouse</h1>
-        <button id="catalog"i class="fa fa-th-large" aria-hidden="true"></i> catalog</button>
+        <button id="catalog"i class="fa fa-th-large" aria-hidden="true"></i><a href="details.html">catalog</a> </button>
         <button id="search"><i class="fa fa-search" aria-hidden="true"></i>search</button>
         <div class="icon">
         <i class="fa fa-heart-o" aria-hidden="true"></i>
@@ -32,7 +34,8 @@
         <i class="fa fa-user" aria-hidden="true"></i>
         </div> 
         </div>
-        <div>
+        <div class="mmm">
+            <div>
                 <img src="women.jpg" id="women">
             </div>
             <div class="sessions">
@@ -45,36 +48,50 @@
                 <h2>select serien</h2>
                 <button>series</button> <br> <br> <button>select</button>
             </div>
+
+        </div>
+        
             <h1 class="rece">Recently viewed</h1>
-            <div>
+            <div class="camon">
 <img src="im1.jpg" id="one">
 <img src="im2.jpg" id="two">
 <img src="camera.png" id="cam">
 <img src="im3.jpg" id="three">
             </div>
             <h1 class="new">New</h1>
-            <div>
+            <div class="camon2">
 <img src="im4.jpg" id="four">
 <img src="mage6.jpg" id="six">
 <img src="mage7.jpg" id="seven">
 <img src="mage8.jpg" id="eight">
             </div>
             <h1>series</h1>
-            <div>
-                <img src="star2.webp" id="star">
+            <div class="xxx">
+                <div class="x1">
+                    <img src="star2.webp" id="star">
                 <img src="marvel.jpg" id="marvel">
                 <img src="avater.jpeg" id="avater">
-                <img src="creator.png" id="creator">
+                </div>
+                <div class="x2">
+                    <img src="creator.png" id="creator">
                 <img src="ideas.jpg" id="ideas">
                 <img src="harry.webp" id="harry">
+
+                </div>
+               <div class="x3">
                 <img src="ninja.jpg" id="ninja">
                 <img src="minifi.jpg" id="mini">
                 <img src="classic.jpeg" id="classic">
                 <img src="city.jpg" id="city">
-                <img src="dc.webp" id="dc">
+
+               </div>
+                <div class="x4">
+                    <img src="dc.webp" id="dc">
                 <img src="disney.webp" id="disney">
                 <img src="lightyear.jpg" id="light">
                 <img src="duplo.jpeg" id="duplo">
+
+                </div>
             </div>
             <div>
                 <button class="series">moreseries</button>
@@ -125,6 +142,7 @@
 
             </div>
 
+            </div>
             </div>
 
 </body>
