--- a/gamer3.0.html
+++ b/gamer3.0.html
@@ -26,7 +26,7 @@
       <img src="brickhouse.png" id="brick">  
       <h1>BrickHouse</h1>
       <div>
-      <button id="catalog"i class="fa fa-th-large" aria-hidden="true"></i><a href="">catalog</a></button>
+      <button id="catalog"i class="fa fa-th-large" aria-hidden="true"></i><a href="finishproduct.html">catalog</a></button>
       </div>
       <div>
       <button id="searches"><i class="fa fa-search" aria-hidden="true"></i>search</button>
