--- a/finishproduct.html
+++ b/finishproduct.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="media.css">
     <link rel="stylesheet" href="finishproduct.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-    <div>
+    <div class="home">
         <div>
             <nav class="nav">
                 <ul>
@@ -40,9 +41,9 @@
             <img src="im1.jpg" id="webs">
           </div>
           <div class="bomber">
-            <h1 class="head1">AT-TE walker/75337 <br><button class="but1">-</button>1 <button class="but6">+</button><p class="p1"><i class="fa fa-trash" aria-hidden="true"></i></h1></p>
-            <h1 class="head2">TieBomber/75347<br><button class="but2">-</button>1 <button class="but5">+</button> <p class="p2"><i class="fa fa-trash" aria-hidden="true"></i></h1></p>
-            <h1 class="head3">501st clone Troopers Battle pack/73345<br><button class="but3">-</button>1 <button class="but4">+</button><p class="p3"><i class="fa fa-trash" aria-hidden="true"></i></h1></p>
+            <h1 class="head1">AT-TE walker/75337 <br><h2 class="cone1"><i class="fa fa-square-o" aria-hidden="true"></i> 1 <i class="fa fa-plus-square-o" aria-hidden="true"></i></h2></h1> <h2 class="thrash1"><i class="fa fa-trash" aria-hidden="true"></i></h2>
+            <h1 class="head2">TieBomber/75347<br><h2 class="cone2"><i class="fa fa-square-o" aria-hidden="true"></i> 1 <i class="fa fa-plus-square-o" aria-hidden="true"></i></h2></h1><h2 class="thrash2"><i class="fa fa-trash" aria-hidden="true"></i></h2>
+            <h1 class="head3">501st clone Troopers Battle pack/73345<br><h2 class="cone3"><i class="fa fa-square-o" aria-hidden="true"></i> 1 <i class="fa fa-plus-square-o" aria-hidden="true"></i></h2></h1><h2 class="thrash3"><i class="fa fa-trash" aria-hidden="true"></i></h1></h2>
           </div>
           <div class="numeros">
             <h1 class="numero1">104.99</h1>
@@ -51,11 +52,12 @@
           </div>
           </div>
           <div class="product">
+            <div class="product2">
             <h1>product</h1>
             <p>$199.96 <br>instead:$269.96</p>
             <button class="save">you save $70</button> <br>
             <button class="order">make order</button>
-
+             </div>
           </div>
         <div class="lego">
        <div>
