--- a/finishproduct.html
+++ b/finishproduct.html
@@ -26,7 +26,7 @@
         <div class="brickhouse">
           <img src="brickhouse.png" id="brick">  
           <h1>BrickHouse</h1>
-          <button id="catalog"i class="fa fa-th-large" aria-hidden="true"></i> catalog</button>
+          <button id="catalog"i class="fa fa-th-large" aria-hidden="true"></i><a href="contact.html">catalog</a> catalog</button>
           <button id="search"><i class="fa fa-search" aria-hidden="true"></i>search</button>
           <div class="icon">
           <i class="fa fa-heart-o" aria-hidden="true"></i>
